--- a/notebooks/figure1.Rmd
+++ b/notebooks/figure1.Rmd
@@ -677,17 +677,30 @@ Not too bad.  The legend for B is a bit cut off, but maybe we can fix that at th
 Let's add the rest of the plots.  The rest of the figure gene expression in both pre-engraftment cells and hFRG hepatocytes for the genes:  ASS1, CYP2E1, LGR5, AXIN2, KIAA0319L, GPR108.
 
 
-```{r fig1_final, fig.height = 18, fig.width = 9}
-plot.cells <- subset(cells,  subset = dataset.type %in% c("hep", "high"))
+```{r fig1_final, include=FALSE}
+cells.hep <- subset(cells, cell.type.shortest != "Endothelial")
+plot.cells <- subset(cells.hep,  subset = dataset.type %in% c("hep", "high"))
+DefaultAssay(plot.cells) <- "RNA"
 
 
 plot_feature <- function(feature_name) {
 # get list of plots for this feature
 plots <- FeaturePlot(plot.cells, split.by="dataset.type", features=feature_name, keep.scale="all", order=TRUE)
 
+  max_expr <- max(plot.cells@assays$RNA[feature_name])
+  min_expr <- min(plot.cells@assays$RNA[feature_name])
+
 # add custom titles
-plots[[1]] <- plots[[1]] + ggtitle("Pre-engraftment") 
-plots[[2]] <- plots[[2]] + ggtitle("hFRG hepatocytes") 
+plots[[1]] <- plots[[1]] + ggtitle("Pre-engraftment") +
+    scale_color_gradientn(colors=CustomPalette(low="#d2d1d3ff",
+                                               mid="#9871edff",
+                                               high="#0902ffff",
+                                               k=50), limits=c(min_expr,max_expr)) 
+plots[[2]] <- plots[[2]] + ggtitle("hFRG hepatocytes") +
+    scale_color_gradientn(colors=CustomPalette(low="#d2d1d3ff",
+                                               mid="#9871edff",
+                                               high="#0902ffff",
+                                               k=50), limits=c(min_expr,max_expr)) 
 
 plots
 
@@ -722,7 +735,11 @@ f <- plot_feature("LGR5")
 g <- plot_feature("AXIN2")
 h <- plot_feature("KIAA0319L")
 i <- plot_feature("GPR108")
+j <- plot_feature("KRT7")
 
+```
+
+```{r fig.height = 18, fig.width = 9}
 layout <- "
 AA
 AA
@@ -730,15 +747,12 @@ BC
 DE
 FG
 "
-
-patchwork::wrap_plots(abc, d, e, f, g, h, i) + 
+patchwork::wrap_plots(abc, d, e, f, g, h, j) + 
   plot_layout(design=layout) & 
   theme(text = element_text(size=8), 
         axis.text = element_text(size=8),
         legend.text = element_text(size=8)) 
-
 ```
-
 
 
 ```{r fig1_final_alt , fig.height = 18, fig.width = 9}
