--- a/notebooks/extra_figures_for_reviewers.Rmd
+++ b/notebooks/extra_figures_for_reviewers.Rmd
@@ -38,35 +38,6 @@ if (!file.exists(cache_file)) {
 
 cells <- integrated_together_no_mouse()
 
-cells$cell.type <- case_when(
-  cells$seurat_clusters == 0 ~ "Portal hepatoctyes (0)",
-  cells$seurat_clusters == 1 ~ "Mid-zonal hepatocytes (1)",  
-  cells$seurat_clusters == 2 ~ "Mid-zonal hepatocytes (2)",
-  cells$seurat_clusters == 3 ~ "Central hepatocytes (3)",
-  cells$seurat_clusters == 4 ~ "Portal hepatocytes (4)",
-  cells$seurat_clusters == 5 ~ "Mid-zonal hepatocytes (5)",
-  cells$seurat_clusters == 6 ~ "Endothelial cells (6)"
-)
-
-cells$cell.type.shorter <- case_when(
-  cells$seurat_clusters == 0 ~ "Portal 0",
-  cells$seurat_clusters == 1 ~ "Mid-zonal 1",  
-  cells$seurat_clusters == 2 ~ "Mid-zonal 2",
-  cells$seurat_clusters == 3 ~ "Central 3",
-  cells$seurat_clusters == 4 ~ "Portal 4",
-  cells$seurat_clusters == 5 ~ "Mid-zonal 5",
-  cells$seurat_clusters == 6 ~ "Endothelial"
-)
-
-cells$cell.type.shortest <- case_when(
-  cells$seurat_clusters == 0 ~ "Portal",
-  cells$seurat_clusters == 1 ~ "Mid-zonal",  
-  cells$seurat_clusters == 2 ~ "Mid-zonal",
-  cells$seurat_clusters == 3 ~ "Central",
-  cells$seurat_clusters == 4 ~ "Portal",
-  cells$seurat_clusters == 5 ~ "Mid-zonal",
-  cells$seurat_clusters == 6 ~ "Endothelial"
-)
 
 cells@reductions$UMAP@cell.embeddings[,2] <- cells@reductions$UMAP@cell.embeddings[,2] * -1
 
@@ -108,7 +79,7 @@ DefaultAssay(cells.hep) <- "RNA"
 cells.plot <- subset(cells.hep, dataset.type %in% c("high", "hep"))
 DefaultAssay(cells.plot) <- "RNA"
 
-plot_feature <- function(gene_name) {
+plot_feature2 <- function(gene_name) {
   
   max_expr <- max(cells.plot@assays$RNA[gene_name])
   min_expr <- min(cells.plot@assays$RNA[gene_name])
@@ -130,7 +101,7 @@ plotlist[['high']] <- plotlist[['high']] + ggtitle("hFRG hepatocytes")
  print(patchwork::wrap_plots(plotlist))
 }
 
-plot_feature("KRT7")
+plot_feature2("KRT7")
 ```
 
 For reference here is a similar plot for LGR5
@@ -143,6 +114,40 @@ print(patchwork::wrap_plots(plotlist))
 
 
 It seems that only a small population of the pre-engraftment hepatocytes express KRT7.
+
+```{r}
+plot.cells <- subset(cells.hep,  subset = dataset.type %in% c("hep", "high"))
+DefaultAssay(plot.cells) <- "RNA"
+
+d <- plot_feature(plot.cells, "ASS1")
+e <- plot_feature(plot.cells, "CYP2E1")
+f <- plot_feature(plot.cells, "LGR5")
+g <- plot_feature(plot.cells, "AXIN2")
+h <- plot_feature(plot.cells, "KIAA0319L")
+i <- plot_feature(plot.cells, "GPR108")
+j <- plot_feature(plot.cells, "KRT7")
+
+```
+
+
+```{r fig.height = 9, fig.width = 9}
+layout <- "
+AB
+CD
+EF
+"
+patchwork::wrap_plots(d, e, f, g, h, j) + 
+  plot_layout(design=layout) & 
+  theme(text = element_text(size=8), 
+        axis.text = element_text(size=8),
+        legend.text = element_text(size=8)) 
+```
+
+
+```{r fig.width=5, fig.height=5}
+patchwork::wrap_plots(f, j, nrow = 2)
+```
+
 
 ## Cerulean/venus expression in zones
 
